--- a/Application/yongyang/pubspec.yaml
+++ b/Application/yongyang/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   percent_indicator: ^2.1.9+1
   google_fonts: ^3.0.1
+  firebase_database: ^6.0.0
+  firebase_core: ^0.7.0
   http: ^0.13.5
 
 dev_dependencies:
