--- a/Application/yongyang/pubspec.yaml
+++ b/Application/yongyang/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   percent_indicator: ^2.1.9+1
   firebase_database: ^6.0.0
   firebase_core: ^0.7.0
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
