--- a/Application/yongyang/android/app/src/main/AndroidManifest.xml
+++ b/Application/yongyang/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.yongyang">
    <application
-        android:label="yongyang"
+        android:label="YongYang"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
